# USV

./: Answers.md  Answers.sh  README.md
install_scripts/: install_PX4.sh  install_ros2.sh  install_swarmz.sh
launch_scripts/: cannon.py  canon.py  launch_simulation.sh  rot.py  warship.py
launch_scripts/.simulation-gazebo/models/env/: model.sdf
launch_scripts/.simulation-gazebo/models/rocket/: model.config  model.sdf
launch_scripts/.simulation-gazebo/models/warship/: model.sdf
launch_scripts/.simulation-gazebo/worlds/: nbpark.sdf
ros2_ws/src/environment/cannon_control/: CMakeLists.txt  package.xml
ros2_ws/src/environment/cannon_control/msg/: FireCommand.msg
ros2_ws/src/environment/cannon_control/scripts/: cannon.py  fire_listener.py
ros2_ws/src/environment/vrx_gz/models/env/: model.sdf
ros2_ws/src/environment/warship_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/environment/warship_control/warship_control/: fire_listener.py
ros2_ws/src/swarmz_pkgs/flag_ship/vrx/vrx_gz/models/roboboat02/materials/scripts/: model.material
ros2_ws/src/swarmz_pkgs/flag_ship/vrx/vrx_gz/worlds/: nbpark.sdf
ros2_ws/src/vrx/vrx_gz/config/: roboboat.yaml
ros2_ws/src/vrx/vrx_gz/models/warship/: model.config  model.sdf
ros2_ws/src/vrx/vrx_gz/models/warship/materials/scripts/: model.material
ros2_ws/src/vrx/vrx_gz/worlds/: nbpark.sdf
ros2_ws/src/vrx/warship_control/msg/: FireCommand.msg
ros2_ws/src/vrx/warship_control/warship_control/: cannon.py
vrx_ws/src/vrx/vrx_gz/config/: roboboat.yaml
